# atelierbuddy

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml
assets/: third_party_notices.json
assets/invoice_templates/standard/: invoice.css  invoice.html
belegmanager/: __init__.py  __main__.py  app_state.py  config.py  constants.py  countries.py  db.py  fts.py  legal.py  main.py  models.py  receipt_completion.py  schemas.py  security.py  versioning.py
belegmanager/services/: __init__.py  auth_service.py  cost_allocation_service.py  import_service.py  invoice_service.py  jobs.py  masterdata_service.py  ocr_service.py  order_search_service.py  order_service.py  receipt_service.py  report_service.py  search_service.py  thumbnail_service.py
belegmanager/ui/: __init__.py  pages.py  theme.py
belegmanager/utils/: date_parser.py  storage.py
docs/: README.md  installation.md  rechnungsvorlagen.md
docs/developer/: README.md  calculations.md  database.md  decisions.md  processes.md
tests/: test_auth_service.py  test_cli_main.py  test_cost_allocation_service.py  test_date_parser.py  test_db.py  test_invoice_service.py  test_legal.py  test_masterdata_service.py  test_order_service.py  test_receipt_amounts.py  test_receipt_service.py  test_report_service.py  test_security_middleware.py  test_storage.py  test_ui_helpers.py  test_versioning.py
